- Fixed a crash when using the retry option in the pause menu while holding the drone
- Fixed a crash when closing the Binoculars from the Binoculars ability at the same time the player died
- Fixed a crash that could happen by accidentally changing the player.sweatSprite animation when interacting with Slopes and Magnetic Ceilings

Version 1.0.63 :
- Replaced Teleport To Chapter Trigger "To Chapter" attribute with "Destination Chapter". This new attribute accept a chapter map path instead of a chapter index, and can be used to teleport to any chapter, even ouside of the current campaign. Old Teleport To Chapter triggers are unaffected
- Updated Custom Torch, Elevator, Upgrade Collectable and Warp Station loenn plugin to display their sprite at the correct position in the latest Loenn version
- Reduced the number of light occluders used by Slopes in order to allow more Slopes in a room before the game cannot handle them
- Fixed a bug that allowed Magnetic Ceilings to trigger solids as if the player was on top of them when the ceiling was far bellow the solid
- Fixed two bugs that could prevent the player to use the bomb upgrade
- Fixed a crash happening when trying to browse the list of achievements of The Forgotten Abysses section in The Scret of Celeste Mountain

Version 1.0.62 :
- Added "Only Current Chapter" attribute to Warp Stations
- Improved collision of Actors entities with upside down Slopes
- Fixed a bug preventing upgrades to be removed in the B-Side of Secret of Celeste Mountain
- Fixed a crash that could happen when dying while using the drivable car from Pandora Box

Version 1.0.61 :
- Fixed french translations for some settings being too long
- Fixed a bug affecting Bubble Doors depth
- Fixed a bug playing wrong animations when sliding on slopes and grabbing a magnetic ceiling when the player inventory is set to Farewell