@@ -43,6 +43,7 @@ Version 1.0.64 :
 - Fixed a crash when using the retry option in the pause menu while holding the drone
 - Fixed a crash when closing the Binoculars from the Binoculars ability at the same time the player died
 - Fixed a crash that could happen by accidentally changing the player.sweatSprite animation when interacting with Slopes and Magnetic Ceilings
+- Fixed a crash if the Remote Drone died to two different sources at the same time
 
 Version 1.0.63 :
 - Replaced Teleport To Chapter Trigger "To Chapter" attribute with "Destination Chapter". This new attribute accept a chapter map path instead of a chapter index, and can be used to teleport to any chapter, even ouside of the current campaign. Old Teleport To Chapter triggers are unaffected
